2001-10-18  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (get_listener_oafiid): Update listener name

2001-10-13  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (real_sync): Try to resolve a listener
	to make sure that something is listening when we issue the sync
	event (disabled for now)
	(get_listener_oafiid): Implement (disabled for now)

2001-10-05  Shaun Merrigan  <shaun.merrigan@sun.com>

	* archiver-client.c (location_client_load_rollback_data):
	Only use tm_gmtoffm if __USE_BSD is defined.

2001-09-28  Bradford Hovinen  <hovinen@ximian.com>

	* config-log.c (parse_line): Only set tm_gmtoff and tm_zone fields
	if __USE_BSD is defined

	* util.c (parse_date): Ditto

	* bonobo-config-archiver.c (bonobo_config_archiver_new): Store the
	listener id in the archiver_db structure
	(bonobo_config_archiver_destroy): Remove the event source
	listener; destroy the XML cache
	(new_rollback_cb): Don't reload everything if we initiated the
	sync ourselves
	(real_sync): Mark that we are currently up to date

2001-09-22  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (notify_listeners): Abort if the object
	is already destroyed

2001-09-07  Bradford Hovinen  <hovinen@ximian.com>

	* archiver-client.c (location_client_store_xml): Make backend_id
	const

	* util.c (parse_date): Set the time zone
	(parse_date): Initialize tm_isdst

	* archiver-client.c (location_client_store_xml): Call
	ConfigArchiver_Location_storageComplete when done
	(location_client_store_xml): Don't try to save the XML file if
	there was an error getting the storage filename

	* location.c (location_storage_complete): Implement
	(impl_ConfigArchiver_Location_storageComplete): Implement

	* config-log.c (config_log_get_backend_id_for_id): Make return
	value const

2001-09-04  Bradford Hovinen  <hovinen@ximian.com>

	* location.c (location_get_storage_filename): Notify listeners
	that new rollback data is available
