@@ -35,9 +35,9 @@ main (int argc, char **argv)
 {
 	GtkWidget *dialog;
 
-        bindtextdomain (PACKAGE, GNOMELOCALEDIR);
-	bind_textdomain_codeset (PACKAGE, "UTF-8");
-        textdomain (PACKAGE);
+        bindtextdomain (GETTEXT_PACKAGE, GNOMELOCALEDIR);
+	bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
+        textdomain (GETTEXT_PACKAGE);
 
 	gnome_init ("config-manager", VERSION, argc, argv);
 	glade_gnome_init ();
