@@ -1,3 +1,8 @@
+2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* config-archiver.c: s/PACKAGE/GETTEXT_PACKAGE/g
+	* config-manager.c: Same here.
+	
 2001-10-18  Bradford Hovinen  <hovinen@ximian.com>
 
 	* bonobo-config-archiver.c (get_listener_oafiid): Update listener name
